<resources>
    <string name="app_name">Proyecto_2_Agenda_Contactos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ver">Ver</string>
    <string name="imagen">imagen</string>
    <string name="contactos">Contactos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crear_contacto">Crear Contacto</string>
    <string name="img">img</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ciudad">Ciudad</string>
    <string name="email">Email</string>
    <string name="direccion">direccion</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="imagen_contacto_info">imagen contacto Info</string>
    <string name="nombreinfo">Nombre:</string>
    <string name="textview">TextView</string>
    <string name="ciudadinfo">Ciudad:</string>
    <string name="edadinfo">Edad:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="emailinfo">Email:</string>
    <string name="telefonos">Telefonos:</string>
    <string name="todo">TODO</string>
    <string name="deletebtn">deleteBtn</string>
</resources>