<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.contacto.InfoContactoFragment">

    <ImageView
        android:id="@+id/imgContactoInfo"
        android:layout_width="213dp"
        android:layout_height="186dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/imagen_contacto_info"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nombreinfo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgContactoInfo" />

    <TextView
        android:id="@+id/labelContactoNombre"
        android:layout_width="94dp"
        android:layout_height="19dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombre"
        tools:text="Eduardo" />

    <TextView
        android:id="@+id/labelApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/apellido"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toEndOf="@+id/labelNombre"
        app:layout_constraintTop_toBottomOf="@+id/imgContactoInfo" />

    <TextView
        android:id="@+id/labelContactoApellido"
        android:layout_width="91dp"
        android:layout_height="18dp"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/labelContactoNombre"
        app:layout_constraintTop_toBottomOf="@+id/labelApellido"
        tools:text="Portillo" />

    <TextView
        android:id="@+id/labelCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/ciudadinfo"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelContactoNombre" />

    <TextView
        android:id="@+id/labelContactoCiudad"
        android:layout_width="94dp"
        android:layout_height="19dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCiudad"
        tools:text="Santa Cruz" />

    <TextView
        android:id="@+id/labelEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/edadinfo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toEndOf="@+id/labelCiudad"
        app:layout_constraintTop_toBottomOf="@+id/labelContactoNombre" />

    <TextView
        android:id="@+id/labelContactoEdad"
        android:layout_width="91dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/labelContactoCiudad"
        app:layout_constraintTop_toBottomOf="@+id/labelEdad"
        tools:text="22" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/emailinfo"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelContactoCiudad" />

    <TextView
        android:id="@+id/labelContactoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail"
        tools:text="eportillovirreira@gmail.com" />

    <TextView
        android:id="@+id/labelDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/direcci_n"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelContactoEmail" />

    <TextView
        android:id="@+id/labelContactoDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDireccion"
        tools:text="Remanso 1 Calle 3 Este" />

</androidx.constraintlayout.widget.ConstraintLayout>